--- a/index.html
+++ b/index.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
 <html lang="en" class="h-100">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="EncryptSL (ETERNITY_ROOT#PATRIK_KOLAŘÍK)">
-    <meta name="keywords" content="encryptsl, minecraft, neverlandmc">
-    <title>NeverLand - 1.18.2</title>
-    <link rel="icon" href="assets/img/icon.jpg">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"/>
-    <link href="assets/css/main.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="EncryptSL (ETERNITY_ROOT#PATRIK_KOLAŘÍK)">
+  <meta name="keywords" content="encryptsl, minecraft, neverlandmc">
+  <title>NeverLand - 1.18.2</title>
+  <link rel="icon" href="assets/img/icon.jpg">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+    integrity="sha256-+xdjtZ+fV2QpS1r5+lJQg1rmCCgv5vLyITpZUqrPH78=" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css"
+    integrity="sha256-YW7U7x59rUPZ3DWzQKbalM/9j2Cp8wapJVQPRxL4w1k=" crossorigin="anonymous">
+  <link href="assets/css/main.css" rel="stylesheet">
 </head>
+
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
     <div class="container">
       <a href="#" class="navbar-brand">NEVERLAND CZ/SK</a>
 
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navmenu"
-      >
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
         <span class="navbar-toggler-icon"></span>
       </button>
 
@@ -44,9 +43,7 @@
   </nav>
 
   <!-- Showcase -->
-  <section
-    class="bg-dark text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start"
-  >
+  <section class="bg-dark text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
     <div class="container">
       <div class="d-sm-flex align-items-center justify-content-between">
         <div>
@@ -57,11 +54,14 @@
           </p>
         </div>
         <div id="randomAv"></div>
-        <!--<img
-          class="img-fluid w-40 d-none d-sm-block"
-          src="assets/img/ask.webp"
-          alt="hero_m"
-        />-->
+      </div>
+    </div>
+  </section>
+
+  <section class="bg-danger text-light p-5">
+    <div class="container">
+      <div class="d-md-flex justify-content-between align-items-center">
+        <h3 class="mb-3 mb-md-0"><i class="bi bi-info-circle-fill"></i> NOVÁ SEZÓNA JIŽ BRZY NA NAŠEM SERVERU</h3>
       </div>
     </div>
   </section>
@@ -73,7 +73,8 @@
         <div class="donate">
           <form action="https://www.paypal.com/donate" method="post" target="_top">
             <input type="hidden" name="hosted_button_id" value="LWS7RACNMSNH6" />
-            <button type="submit" class="btn btn-warning btn-lg" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button">DONATE</button>
+            <button type="submit" class="btn btn-warning btn-lg" name="submit"
+              title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button"><i class="bi bi-cash-coin"></i> DONATE</button>
           </form>
         </div>
       </div>
@@ -141,72 +142,72 @@
           </p>
           <div class="vertical-timeline vertical-timeline--animate vertical-timeline--one-column">
             <div class="vertical-timeline-item vertical-timeline-element">
-                <div>
-                    <span class="vertical-timeline-element-icon bounce-in">
-                        <i class="badge badge-dot badge-dot-xl bg-success"> </i>
-                    </span>
-                    <div class="vertical-timeline-element-content bounce-in">
-                        <p>Dokončen Projekt metro a nether spawn.</p>
-                        <span class="vertical-timeline-element-date">31.1.2022</span>
-                    </div>
+              <div>
+                <span class="vertical-timeline-element-icon bounce-in">
+                  <i class="badge badge-dot badge-dot-xl bg-success"> </i>
+                </span>
+                <div class="vertical-timeline-element-content bounce-in">
+                  <p>Dokončen Projekt metro a nether spawn.</p>
+                  <span class="vertical-timeline-element-date">31.1.2022</span>
                 </div>
+              </div>
             </div>
             <div class="vertical-timeline-item vertical-timeline-element">
-                <div>
-                    <span class="vertical-timeline-element-icon bounce-in">
-                        <i class="badge badge-dot badge-dot-xl bg-success"> </i>
-                    </span>
-                    <div class="vertical-timeline-element-content bounce-in">
-                      <p>Zabit druhý drak po resetu endu.</p>
-                        <span class="vertical-timeline-element-date">3.1.2022</span>
-                    </div>
+              <div>
+                <span class="vertical-timeline-element-icon bounce-in">
+                  <i class="badge badge-dot badge-dot-xl bg-success"> </i>
+                </span>
+                <div class="vertical-timeline-element-content bounce-in">
+                  <p>Zabit druhý drak po resetu endu.</p>
+                  <span class="vertical-timeline-element-date">3.1.2022</span>
                 </div>
+              </div>
             </div>
             <div class="vertical-timeline-item vertical-timeline-element">
-                <div>
-                    <span class="vertical-timeline-element-icon bounce-in">
-                        <i class="badge badge-dot badge-dot-xl bg-success"> </i>
-                    </span>
-                    <div class="vertical-timeline-element-content bounce-in">
-                      <p>Spuštěna verze <b>1.18.1</b> a resetován end.</p>
-                        <span class="vertical-timeline-element-date">28.12.2021</span>
-                    </div>
+              <div>
+                <span class="vertical-timeline-element-icon bounce-in">
+                  <i class="badge badge-dot badge-dot-xl bg-success"> </i>
+                </span>
+                <div class="vertical-timeline-element-content bounce-in">
+                  <p>Spuštěna verze <b>1.18.1</b> a resetován end.</p>
+                  <span class="vertical-timeline-element-date">28.12.2021</span>
                 </div>
+              </div>
             </div>
             <div class="vertical-timeline-item vertical-timeline-element">
-                <div>
-                    <span class="vertical-timeline-element-icon bounce-in">
-                        <i class="badge badge-dot badge-dot-xl bg-success"> </i>
-                    </span>
-                    <div class="vertical-timeline-element-content bounce-in">
-                      <p>Spuštěn projekt stavba metra a design. <b>Author Metra Korspeed a další..</b></p>
-                        <span class="vertical-timeline-element-date">11.12.2021</span>
-                    </div>
+              <div>
+                <span class="vertical-timeline-element-icon bounce-in">
+                  <i class="badge badge-dot badge-dot-xl bg-success"> </i>
+                </span>
+                <div class="vertical-timeline-element-content bounce-in">
+                  <p>Spuštěn projekt stavba metra a design. <b>Author Metra Korspeed a další..</b></p>
+                  <span class="vertical-timeline-element-date">11.12.2021</span>
                 </div>
+              </div>
             </div>
             <div class="vertical-timeline-item vertical-timeline-element">
-                <div>
-                    <span class="vertical-timeline-element-icon bounce-in">
-                        <i class="badge badge-dot badge-dot-xl bg-success"> </i>
-                    </span>
-                    <div class="vertical-timeline-element-content bounce-in">
-                      <p>Zabit první drak na serveru.</p>
-                        <span class="vertical-timeline-element-date">8.7.2021</span>
-                    </div>
+              <div>
+                <span class="vertical-timeline-element-icon bounce-in">
+                  <i class="badge badge-dot badge-dot-xl bg-success"> </i>
+                </span>
+                <div class="vertical-timeline-element-content bounce-in">
+                  <p>Zabit první drak na serveru.</p>
+                  <span class="vertical-timeline-element-date">8.7.2021</span>
                 </div>
+              </div>
             </div>
             <div class="vertical-timeline-item vertical-timeline-element">
-                <div>
-                    <span class="vertical-timeline-element-icon bounce-in">
-                        <i class="badge badge-dot badge-dot-xl bg-warning"> </i>
-                    </span>
-                    <div class="vertical-timeline-element-content bounce-in">
-                      <p>Dne 30.6.2021 - První spuštění serveru.</p>
-                        <span class="vertical-timeline-element-date">30.6.2021</span>
-                    </div>
+              <div>
+                <span class="vertical-timeline-element-icon bounce-in">
+                  <i class="badge badge-dot badge-dot-xl bg-warning"> </i>
+                </span>
+                <div class="vertical-timeline-element-content bounce-in">
+                  <p>Dne 30.6.2021 - První spuštění serveru.</p>
+                  <span class="vertical-timeline-element-date">30.6.2021</span>
                 </div>
+              </div>
             </div>
-        </div>
+          </div>
         </div>
       </div>
     </div>
@@ -220,20 +221,12 @@
         <!-- Item 1 -->
         <div class="accordion-item">
           <h2 class="accordion-header">
-            <button
-              class="accordion-button collapsed"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#question-one"
-            >
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#question-one">
               Pluginy
             </button>
           </h2>
-          <div
-            id="question-one"
-            class="accordion-collapse collapse"
-            data-bs-parent="#questions"
-          >
+          <div id="question-one" class="accordion-collapse collapse" data-bs-parent="#questions">
             <div class="accordion-body">
               ProtocolSupport, EchelonCore, Chunky, ChunkyBorder a další...
             </div>
@@ -242,20 +235,12 @@
         <!-- Item 2 -->
         <div class="accordion-item">
           <h2 class="accordion-header">
-            <button
-              class="accordion-button collapsed"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#question-two"
-            >
-             Datapacky
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#question-two">
+              Datapacky
             </button>
           </h2>
-          <div
-            id="question-two"
-            class="accordion-collapse collapse"
-            data-bs-parent="#questions"
-          >
+          <div id="question-two" class="accordion-collapse collapse" data-bs-parent="#questions">
             <div class="accordion-body">
               <li>armor statues - Tento datapack dovoluje manipulovat s objekty</li>
               <li>double shulker shells - Tento datapack zdvojnásobuje šanci na drop shulkeru</li>
@@ -267,20 +252,12 @@
         <!-- Item 3 -->
         <div class="accordion-item">
           <h2 class="accordion-header">
-            <button
-              class="accordion-button collapsed"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#question-three"
-            >
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#question-three">
               Hosting
             </button>
           </h2>
-          <div
-            id="question-three"
-            class="accordion-collapse collapse"
-            data-bs-parent="#questions"
-          >
+          <div id="question-three" class="accordion-collapse collapse" data-bs-parent="#questions">
             <div class="accordion-body">
               Hostujeme na českém kvalitním hostingu víc nic nepotřebuješ vědět.
             </div>
@@ -289,20 +266,12 @@
         <!-- Item 4 -->
         <div class="accordion-item">
           <h2 class="accordion-header">
-            <button
-              class="accordion-button collapsed"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#question-four"
-            >
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#question-four">
               Jak se dostat na server
             </button>
           </h2>
-          <div
-            id="question-four"
-            class="accordion-collapse collapse"
-            data-bs-parent="#questions"
-          >
+          <div id="question-four" class="accordion-collapse collapse" data-bs-parent="#questions">
             <div class="accordion-body">
               Bohužel server je soukromý a vybíráme si z řad veřejnosti případně kamarádů.
             </div>
@@ -311,20 +280,12 @@
         <!-- Item 5 -->
         <div class="accordion-item">
           <h2 class="accordion-header">
-            <button
-              class="accordion-button collapsed"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#question-five"
-            >
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+              data-bs-target="#question-five">
               Seed mapy
             </button>
           </h2>
-          <div
-            id="question-five"
-            class="accordion-collapse collapse"
-            data-bs-parent="#questions"
-          >
+          <div id="question-five" class="accordion-collapse collapse" data-bs-parent="#questions">
             <div class="accordion-body">
               Seed mapy nedáváme.
             </div>
@@ -338,9 +299,10 @@
     <div class="container">
       <h2 class="text-center text-white">ČLENOVÉ SERVERU</h2>
       <p class="lead text-center text-white mb-5">
-        <span id="membersInList"></span>
+        <!-- <span id="membersInList"></span> -->
       </p>
-      <div class="row g-4" id="members"></div>
+      <div class="h1 text-center">...JIŽ BRZY...</div>
+      <!-- <div class="row g-4" id="members"></div> -->
     </div>
   </section>
 
@@ -355,12 +317,10 @@
     </div>
   </footer>
 
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-    crossorigin="anonymous"
-  ></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha256-JRXjfu4x9e89ZZsh3MhNxupzKwaHLaUQeLW1Jt40wME=" crossorigin="anonymous"></script>
   <script src="assets/app.js"></script>
   <script>document.getElementById("year").innerHTML = new Date().getFullYear();</script>
 </body>
+
 </html>
